fix: homeNavbar refactoring

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -7,6 +7,44 @@
     background-size: cover;
 }
 
+.home-navbar .navber-container {
+    margin-top: 55px;
+    height: 642px;
+}
+
+.home-navbar .navber-container .menu {
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.home-navbar .navber-container .menu .brend-logo{
+    width: 125px;
+    height: 30px;
+    
+}
+
+.home-navbar .navber-container .menu .links{
+    min-width: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.home-navbar .navber-container .menu .links .login-button{
+   background: #3776CC;
+   color: #f8f8ff;
+}
+
+.home-navbar .navber-container .menu .user-avatar{
+    width: 50px;
+    height: 50px;
+    border-radius: 24px;
+}
+
 .home-navbar a {
     text-decoration: none;
 }
