feat: publish OtherNavbar

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,161 +1,238 @@
 .home-navbar {
-    width: 100%;
-    height: 773px;
-    display: flex;
-    background: url('/public/img/banner.webp');
-    background-color: white;
-    background-size: cover;
+  width: 100%;
+  height: 773px;
+  display: flex;
+  background: url("/public/img/banner.webp");
+  background-color: white;
+  background-size: cover;
 }
 
 .home-navbar .navber-container {
-    margin-top: 55px;
-    height: 642px;
+  margin-top: 55px;
+  height: 642px;
 }
 
 .home-navbar .navber-container .menu {
-    height: 50px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.home-navbar .navber-container .menu .brend-logo{
-    width: 125px;
-    height: 30px;
-    
+.home-navbar .navber-container .menu .brend-logo {
+  width: 125px;
+  height: 30px;
 }
 
-.home-navbar .navber-container .menu .links{
-    min-width: 700px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.home-navbar .navber-container .menu .links {
+  min-width: 700px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.home-navbar .navber-container .menu .links .login-button{
-   background: #3776CC;
-   color: #f8f8ff;
+.home-navbar .navber-container .menu .links .login-button {
+  background: #3776cc;
+  color: #f8f8ff;
 }
 
-.home-navbar .navber-container .menu .user-avatar{
-    width: 50px;
-    height: 50px;
-    border-radius: 24px;
+.home-navbar .navber-container .menu .user-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 24px;
 }
 
 .home-navbar a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .home-navbar .hover-line a {
-    color: #f8f8ff;
-    z-index: 100;
+  color: #f8f8ff;
+  z-index: 100;
 }
 
 .home-navbar .underline {
-    display: block;
-    content: "";
-    border-bottom: solid 2px #d7b686;
+  display: block;
+  content: "";
+  border-bottom: solid 2px #d7b686;
 }
 
 .home-navbar .hover-line:after {
-    display: block;
-    content: "";
-    border-bottom: solid 2px #d7b686;
-    transform: scaleX(0);
-    transition: transform 250ms ease-in-out;
+  display: block;
+  content: "";
+  border-bottom: solid 2px #d7b686;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
 }
 
 .home-navbar .hover-line:hover:after {
-    transform: scaleX(1);
+  transform: scaleX(1);
 }
 
 .home-navbar div.hover-line:after {
-    transform-origin: 0% 50%;
+  transform-origin: 0% 50%;
 }
 
 .home-navbar .navber-container .header-frame {
-    margin-top: 142px;
-    height: 462px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  margin-top: 142px;
+  height: 462px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .home-navbar .navber-container .header-frame .detail {
-    width: 510px;
-    display: flex;
-    flex-direction: column;
+  width: 510px;
+  display: flex;
+  flex-direction: column;
 }
 
 .home-navbar .navber-container .header-frame .detail .head-main-txt {
-    width: 450px;
-    height: 150px;
-    font-family: "Roboto Serif";
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: -0.75px;
-    color: #f8f8ff;
+  width: 450px;
+  height: 150px;
+  font-family: "Roboto Serif";
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.75px;
+  color: #f8f8ff;
 }
 
 .home-navbar .navber-container .header-frame .detail .wel-txt {
-    width: 510px;
-    height: 42px;
-    font-family: "Roboto Serif";
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: -0.54px;
-    color: #d7b686;
+  width: 510px;
+  height: 42px;
+  font-family: "Roboto Serif";
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.54px;
+  color: #d7b686;
 }
 
 .home-navbar .navber-container .header-frame .detail .service-txt {
-    margin-top: 23px;
-    width: 153px;
-    height: 23px;
-    font-family: "Roboto Serif";
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: -0.3px;
-    color: #d5d5d5;
+  margin-top: 23px;
+  width: 153px;
+  height: 23px;
+  font-family: "Roboto Serif";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.3px;
+  color: #d5d5d5;
 }
 
 .home-navbar .navber-container .detail .signup {
-    margin-top: 73px;    
+  margin-top: 73px;
 }
 
 .home-navbar .navber-container .detail .signup .signup-button {
-    width: 210px;
-    height: 60px;
-    border-radius: 4px;
-    background: #1976d2;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 17px; 
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    color: #f8f8ff;  
+  width: 210px;
+  height: 60px;
+  border-radius: 4px;
+  background: #1976d2;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #f8f8ff;
 }
 
 .home-navbar .navber-container .logo-frame {
-    margin-top: 43px;
-    width: 690px;
-    height: 419px;
+  margin-top: 43px;
+  width: 690px;
+  height: 419px;
 }
 
 .home-navbar .navber-container .logo-frame .logo-img {
-    width: 100%;
-    height: 100%;
-    background: url("/public/img/logo.webp");
-    background-size: contain;
-    background-repeat: no-repeat;
-    filter: invert(36%);
+  width: 100%;
+  height: 100%;
+  background: url("/public/img/logo.webp");
+  background-size: contain;
+  background-repeat: no-repeat;
+  filter: invert(36%);
+}
+
+/*OtherNavbar*/
+
+.other-navbar {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  background: url("/public/img/banner.webp");
+  background-size: cover;
+}
+
+.other-navbar .navber-container {
+  margin-top: 55px;
+}
+
+.other-navbar .navber-container .menu {
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.other-navbar .navber-container .menu .brend-logo {
+  width: 125px;
+  height: 30px; 
+}
+
+.other-navbar .navber-container .menu .links {
+  min-width: 700px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.other-navbar .navber-container .menu .links .login-button {
+  background: #3776cc;
+  color: #f8f8ff;
+}
+
+.other-navbar .navber-container .menu .user-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 24px;
+}
+
+.other-navbar a {
+  text-decoration: none;
+}
+
+.other-navbar .hover-line a {
+  color: #f8f8ff;
+  z-index: 100;
+  display: inline-block;
+}
+
+.other-navbar .underline {
+  display: block;
+  content: "";
+  border-bottom: solid 2px #d7b686;
+}
+
+.other-navbar .hover-line:after {
+  display: block;
+  content: "";
+  border-bottom: solid 2px #d7b686;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
+}
+
+.other-navbar .hover-line:hover:after {
+  transform: scaleX(1);
+}
+
+.other-navbar div.hover-line:after {
+  transform-origin: 0% 50%;
 }
