--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,5 +1,50 @@
 .homepage {
     width: 100%;
     height: auto;
-    
+
+}
+
+/** STATISTICS**/
+
+.homepage .static-frame {
+    width: 100%;
+    height: 236px;
+    background: #343434;
+}
+
+.homepage .static-frame .info {
+    height: 100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.homepage .static-frame .info .static-box {
+    width: 200px;
+    height: 116px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.homepage .static-frame .info .static-num {
+    text-align: center;
+    font-family: Poppins;
+    font-size: 54px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 80px;
+    color: #d7b686;
+}
+
+.homepage .static-frame .info .static-text {
+    text-align: center;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 30px;
+    color: #d7b586;
 }
