feat: develop popular dishes sectional component

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -48,3 +48,57 @@
     line-height: 30px;
     color: #d7b586;
 }
+
+/** POPULAR DISHES**/
+
+.homepage .popular-dishes-frame {
+    width: 100%;
+    height: 580px;
+    display: flex;
+    background: #f8f8ff;
+}
+
+.homepage .popular-dishes-frame .popular-section {
+    margin-top: 45px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.homepage .popular-dishes-frame .popular-section .category-title {
+    text-align: center;
+    font-family: "Roboto Serif";
+    font-size: 36px;
+    font-style:  normal;
+    font-weight:  600;
+    line-height:  normal;
+    letter-spacing: 1.44px;
+    color: #000;
+}
+
+.homepage .popular-dishes-frame .popular-section .cards-frame {
+    width: 100%;
+    margin-top: 43px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.homepage .popular-dishes-frame .cards-frame .card {
+    min-height: 430px;
+    min-width: 300px;
+    cursor: pointer;
+}
+
+.homepage .popular-dishes-frame .cards-frame .card  .card-cover {
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0) 200px
+  ),
+  linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.8),
+    rgba(0, 0, 0, 0) 300px
+    );
+}
