--- a/src/css/home.css
+++ b/src/css/home.css
@@ -102,3 +102,102 @@
     rgba(0, 0, 0, 0) 300px
     );
 }
+
+/** NEW PRODUCTS **/
+
+.homepage .new-products-frame {
+    width: 100%;
+    height: 605px;
+    background: #f8f8ff;
+    display: flex;
+}
+
+.homepage .main {
+    margin-top: 45px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.homepage .new-products-frame .category-title {
+    font-family: "Dancing Script";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 43px;
+}
+
+.homepage .new-products-frame .main .cards-frame {
+    width: 100%;
+    margin: 47px 2px 2px 2px;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.homepage .new-products-frame .main .card {
+    height: 335px;
+    width: 290px;
+    cursor: pointer;
+}
+
+.homepage .new-products-frame .product-sale {
+    position: absolute;
+    margin-top: 10px;
+    z-index: 100;
+    width: 90px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ff9200;
+    box-shadow: 4px 6px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 25px;
+    font-family: "Popins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 21px;
+    color: #f8f8ff;
+}
+
+.homepage .new-products-frame .product-detail {
+    width: auto;
+    height: 49%;
+    display: flex;
+    justify-content: center;
+    margin-top: -12px;
+    border-top: 1px solid;
+    border-color: #f8f8ff;
+    background-color: #fafbfb;
+}
+
+.homepage .new-products-frame .product-detail .info {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.homepage .new-products-frame .product-detail .title {
+    width: 65px;
+    font-weight: 500;
+}
+
+.homepage .new-products-frame .product-detail .price {
+    margin-left: 10px;
+    width: 20px;
+    font-weight: 500;
+}
+
+.homepage .new-products-frame .product-detail .divider {
+    margin: 0 10px 0 10px;
+    width: 2px;
+    background-color: #d9d9d9;
+}
+
+.homepage .new-products-frame .product-detail .views {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+}
