--- a/src/css/home.css
+++ b/src/css/home.css
@@ -58,6 +58,21 @@
     background: #f8f8ff;
 }
 
+.homepage .popular-dishes-frame .no-data {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: capitalize;
+    font-family: "Popins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    color: #e3c08d;
+}
+
 .homepage .popular-dishes-frame .popular-section {
     margin-top: 45px;
     display: flex;
@@ -200,4 +215,19 @@
     display: flex;
     align-items: center;
     font-weight: 500;
+}
+
+.homepage .new-products-frame .no-data {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: capitalize;
+    font-family: "Popins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    color: #e3c08d;
 }
