feat: develop events sectional components

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -307,3 +307,192 @@
     line-height: 30px;
     color: #e3c08d;
   }
+
+  /** EVENTS **/
+
+.homepage .events-frame {
+    width: 100%;
+    height: 745px;
+    background: #f8f8ff;
+    display: flex;
+  }
+  
+  .homepage .events-frame .category-title {
+    font-family: "Dancing Script";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 43px;
+    padding-top: 20px;
+  }
+  
+  .homepage .events-frame .events-main {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .homepage .events-frame .events-main .events-text {
+    width: auto;
+    height: 70px;
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .homepage .events-frame .events-main .prev-next-frame {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    margin: 40px 0 40px 0;
+    height: 25px;
+  }
+  
+  .homepage .events-frame .dot-frame-pagination {
+    position: relative;
+    width: auto;
+    display: flex;
+  }
+  
+  .homepage .events-frame .events-main .events-info {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+  .homepage .events-frame .events-info .events-info-frame {
+    position: relative;
+    width: 500px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .homepage .events-frame .events-img {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-radius: 10px;
+    background-size: cover;
+  }
+  
+  .homepage .events-frame .events-desc {
+    position: absolute;
+    margin-bottom: 7px;
+    padding: 10px;
+    display: flex;
+    width: 90%;
+    height: auto;
+    bottom: 5px;
+    background: #f8f8ff;
+    box-shadow: 0px 40px 30px rgba(25, 25, 46, 0.04);
+    border-radius: 8px;
+  }
+  
+  .homepage .events-frame .events-desc .events-bott {
+    width: 97%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .homepage .events-frame .events-desc .events-bott .bott-left {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .homepage .events-frame .bott-left .event-title-speaker {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+  .homepage .events-frame .event-title-speaker .event-organizator {
+    display: flex;
+    align-items: center;
+  }
+  
+  .homepage .events-frame .event-title-speaker .event-organizator img {
+    width: 20px;
+    margin-right: 10px;
+  }
+  
+  .homepage .events-frame .event-organizator .spec-text-author {
+    font-family: "GT Walsheim Pro";
+    font-style: normal;
+    line-height: 34px;
+    color: #140342;
+  }
+  
+  .homepage .events-frame .bott-left .text-desc {
+    margin-top: 10px;
+    font-family: "GT Walsheim Pro";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 26px;
+    color: #4f547b;
+  }
+  
+  .homepage .events-frame .bott-left .bott-info {
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    width: 100%;
+    height: 16px;
+  }
+  
+  .homepage .events-frame .bott-info .bott-info-main {
+    margin-left: 10px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: auto;
+    height: 100%;
+    font-family: "GT Walsheim Pro";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #4f547b;
+  }
+  
+  .homepage .events-frame .bott-info .bott-info-main img {
+    margin-right: 10px;
+  }
+  
+  .homepage .events-frame .swiper-wrapper {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .homepage .events-frame .swiper-pagination-bullet {
+    margin-right: 5px;
+    width: 8px;
+    height: 8px;
+    text-align: center;
+    opacity: 1;
+    background: #f8f8ff;
+    border-radius: 50%;
+  }
+  
+  .homepage .events-frame .swiper-pagination-bullet-active {
+    background: #343434;
+    border-radius: 50%;
+  }
+  
