--- a/src/css/app.css
+++ b/src/css/app.css
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-}2
+}
 
 .App-link {
   color: rgb(112, 76, 182);
